# bmsm-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.org  flake.nix  shell.nix
.github/workflows/: rust.yml
src/: bars.rs  bms_parser.rs  consts.rs  main.rs  menu.rs  new_bms_parser.rs  results.rs  score.rs  time.rs  types.rs  ui.rs  user_settings.rs
